--- a/dbflute.net-backstage/.project
+++ b/dbflute.net-backstage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dbflute.net-backyard</name>
+	<name>dbflute.net-backstage</name>
 	<comment></comment>
 	<projects>
 	</projects>
